[workspace]
resolver = "3"
members = [
  "crates/x402-types",
  "crates/x402-axum",
  "crates/x402-reqwest",
  "crates/x402-facilitator-local",
  "crates/chains/x402-chain-eip155",
  "crates/chains/x402-chain-solana",
  "crates/chains/x402-chain-aptos",
  "crates/x402-stress-test",
  "examples/x402-axum-example",
  "examples/x402-reqwest-example",
  ".",
]

[workspace.package]
version = "1.1.1"
authors = ["Sergey Ukustov <sergey@ukstv.me>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/x402-rs/x402-rs"
homepage = "https://x402.rs"
rust-version = "1.88.0"
keywords = ["blockchain", "payments", "x402", "stablecoin", "http-402"]
categories = ["cryptography::cryptocurrencies", "finance", "network-programming", "web-programming::http-server"]

[workspace.dependencies]
x402-axum = { version = "1.0", path = "crates/x402-axum" }
x402-chain-aptos = { version = "1.0", path = "crates/chains/x402-chain-aptos" }
x402-chain-eip155 = { version = "1.0", path = "crates/chains/x402-chain-eip155" }
x402-chain-solana = { version = "1.0", path = "crates/chains/x402-chain-solana" }
x402-facilitator-local = { version = "1.0", path = "crates/x402-facilitator-local" }
x402-reqwest = { version = "1.0", path = "crates/x402-reqwest" }
x402-types = { version = "1.0", path = "crates/x402-types" }

alloy-primitives = { version = "1.5.4" } # To represent token amounts
async-trait = { version = "0.1" }
axum = { version = "0.8" }
dotenvy = { version = "0.15.7" }
http = { version = "1.4" }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }

# Common dependencies
thiserror = { version = "2.0" }
tokio = { version = "1.49", features = ["sync", "rt-multi-thread"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tower = { version = "0.5.3" }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing = { version = "0.1.44" }
tracing-core = { version = "0.1.36" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = { version = "2.5.8", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }

# Patches for aptos-core dependencies
[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }

[patch."https://github.com/aptos-labs/aptos-core"]
aptos-runtimes = { path = "patches/aptos-runtimes" }

# Local package definition (infra402-facilitator)
[package]
name = "infra402-facilitator"
version = "0.0.4"
authors = ["0xcartman <0xcartman@pm.me>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/infra402/infra402-facilitator"
description = "Production-ready x402 facilitator with enhanced security features, abuse detection, rate limiting, and multi-chain support"
readme = "README.md"
homepage = "https://infra402.com"
documentation = "TBA"
keywords = ["blockchain", "payments", "x402", "stablecoin", "http-402", "infrastructure", "ai-agents"]
categories = ["cryptography", "finance", "network-programming", "web-programming::http-server"]

[dependencies]
axum = { version = "0.8.8" }
tokio = { version = "1.49", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
dotenvy = { version = "0.15.7" }
serde_json = { version = "1.0.149" }
tower-http = { version = "0.6.8", features = ["trace", "cors", "limit"] }
tower = { version = "0.5.3" }
serde = { version = "1.0.228", features = ["derive"] }
once_cell = { version = "1.21.3" }
regex = { version = "1.12.3" }
url = { version = "2.5.8", features = ["serde"] }
alloy = { version = "1.6.1", features = ["dyn-abi"] }
alloy-json-rpc = { version = "1.6" }
thiserror = { version = "2.0.18" }
base64 = { version = "0.22.1" }
rust_decimal = { version = "1.40.0" }
async-trait = { version = "0.1.89" }
dashmap = { version = "6.1.0" }
ipnetwork = { version = "0.20.0" }
config = { version = "0.14.1", default-features = false, features = ["toml"] }

# Solana
solana-sdk = { version = "2.3.1", features = ["full"] }
solana-commitment-config = { version = "2.2.1" } # Older version due to compatibility with solana-sdk
bincode = { version = "1.3.3" } # Older version due to compatibility with solana-sdk
spl-token = { version = "8.0.0" }
spl-token-2022 = { version = "9.0.0" }
solana-client = { version = "2.3.13" }

# Tracing and OpenTelemetry
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
opentelemetry = { version = "0.30.0" }
opentelemetry_sdk = { version = "0.30.0" }
opentelemetry-semantic-conventions = { version = "0.30.0", features = ["semconv_experimental"] }
tracing-core = { version = "0.1.36" }
tracing-opentelemetry = { version = "0.31.0" }
opentelemetry-otlp = { version = "0.30.0", features = ["metrics", "grpc-tonic"] }
opentelemetry-stdout = { version = "0.30.0", features = ["trace", "metrics"] }
toml = "0.8.23"

[dev-dependencies]
toml = "0.8.23"

[features]
telemetry = []
