[package]
name = "x402-stress-test"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "x402-stress-test"
path = "src/main.rs"

[dependencies]
# X402 dependencies
infra402-facilitator = { path = "../.." }
x402-chain-eip155 = { path = "../chains/x402-chain-eip155", features = ["client"] }

# Alloy for EVM types and signing
alloy = { version = "1.6", features = ["signers"] }

# HTTP client
reqwest = { version = "0.13", features = ["json", "http2"] }

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# CLI and configuration
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = { version = "0.15" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"

# Progress and terminal UI
indicatif = { version = "0.17", features = ["tokio"] }

# Utilities
rand = "0.9"
anyhow = "1.0"
chrono = "0.4"

# Async utilities
futures = "0.3"
